--- a/Web/app/templates/base.html
+++ b/Web/app/templates/base.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     {% if title %}
-      <title>{{ title }} - SVStore</title>
+      <title>{{ title }} - DOGSV</title>
     {% else %}
-      <title>SVStore</title>
+      <title>DOGSV</title>
     {% endif %}
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
