Fixed region filtering
Was not working because the quotation marks weren’t properly escaped

--- a/Web/app/templates/builder.html
+++ b/Web/app/templates/builder.html
@@ -428,7 +428,7 @@
           document.getElementById('chrom').value = "";
           document.getElementById('start').value = "";
           document.getElementById('end').value = "";
-          return $('#form-region_include').append("<option value=" + region + ">" + region + "</option>");
+          return $('#form-region_include').append("<option value=\"" + region + "\">" + region + "</option>");
         }
       });
     });
